[project]
name = "ttsconversion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markdown>=3.7",
    "markitdown>=0.1.1",
    "nltk>=3.9.1",
    "pydub>=0.25.1",
    "pyttsx3>=2.98",
    "spacy>=3.8.5",
    "transformers>=4.51.1",
]
