[project]
name = "ttsconversion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markdown>=3.7",
    "markitdown>=0.1.1",
    "nltk>=3.9.1",
    "omegaconf>=2.3.0",
    "onnxruntime>=1.21.0",
    "pydub>=0.25.1",
    "pyttsx3>=2.98",
    "soundfile>=0.13.1",
    "spacy>=3.8.5",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "transformers>=4.51.1",
]
